<resources>
    <string name="app_name">HM快译</string>
    <string name="edt_hint_fromText">请输入要翻译的内容..</string>
    <string name="tv_text_translation">翻译结果</string>
    <string name="tv_text_history">翻译历史</string>
    <string name="tv_text_original">原文</string>


    <!--可选择的语言项-->
    <string name="AutoDet">自动检测</string>
    <string name="Chinese">中文</string>
    <string name="English">英语</string>
    <string name="AP">文言文</string>
    <string name="Japanese">日语</string>
    <string name="Korean">韩语</string>
    <string name="French">法语</string>
    <string name="Russian">俄语</string>
    <string name="German">德语</string>
    <string name="ChineseTraditional">繁体中文</string>
    <string name="chooseLanguage">选择语言</string>
    <string name="jsonTransApi">正在翻译…</string>
    <string name="deleteHistory">删除历史</string>

    <string name="accessibility_des">用于翻译屏幕上的内容</string>
    <string name="accessibility_pge">屏幕取词（HM快译）</string>
    <string name="Delete">删除</string>
    <string name="Function">功能</string>
    <string name="Settings">设置</string>
    <string name="ScreenTranslation">屏幕翻译</string>
    <string name="ScreenTranslationIntroduction">获取屏幕上的文字进行翻译</string>
    <string name="ClipboardTranslation">剪贴板翻译</string>
    <string name="ClipboardTranslationIntroduction">实时翻译系统剪贴板的内容</string>
    <string name="Back">返回</string>
    <string name="RelatedPreparation">相关准备</string>
    <string name="OpenFloatWindowPermission">开启悬浮窗权限</string>
    <string name="GotoSettings">去设置</string>
    <string name="OpenAccessibilityService">开启辅助服务</string>
    <string name="RelatedPreTip">请做好下列准备工作，否则你无法正常使用此功能</string>
    <string name="FromText">原文</string>
    <string name="Copy">复制</string>
    <string name="ToText">译文</string>
    <string name="Step1_open_floatPermission">第一步：开启悬浮窗权限</string>
    <string name="ApplyFloatPermissionMsg">检测到你并未开启悬浮窗权限，本软件部分功能需要创建悬浮窗，是否现在去开启？</string>
    <string name="GotoFloatPerActivityErrorMsg">如果跳转失败，请前往设置->应用管理->HM快译->权限详情中找到悬浮窗权限并开启（不同机型可能会有差别）</string>
    <string name="OpenedFloatPermission">已经开启？</string>
    <string name="Cancel">取消</string>
    <string name="OpenedFloatPermissionMsg">你已经开启了悬浮窗权限，请进行下一步操作。</string>
    <string name="StepEnd_OpenAccessibilityService">最后一步：开启辅助服务</string>
    <string name="Suggest_aboutAccessService_notClearProcess">当应用进程被清理时辅助服务也会随之关闭，反复开启辅助服务会使你感到繁琐，所以我强烈建议你将HM快译添加到内存清理白名单之中，HM快译不会占用你过多的内存。</string>
    <string name="OpenAccessibilityServiceMsg">屏幕取词功能需要你开启辅助服务，HM快译不会泄露你任何信息，请放心开启。</string>
    <string name="OpenedAccessibilityServiceMsg">你已开启辅助服务，现在可以使用此功能了。</string>
    <string name="GotoOpen">去开启</string>
    <string name="OpenFloatPermissionExplain">屏幕翻译触发器，显示翻译结果等地方需要使用到悬浮窗权限，这个权限未开启将导致功能无法使用。</string>
    <string name="AllowNotification">允许通知</string>
    <string name="AllowNotificationExplain">大部分手机默认是允许通知的，你无需手动去设置。不给予通知权限并不会影响正常功能，但允许通知会给你带来很多便利。比如当你觉得屏幕取词触发器妨碍了你时，你就可以在通知栏暂时关闭屏幕翻译功能。</string>
    <string name="NextStep">下一步</string>
    <string name="System">系统</string>
    <string name="Finish">完成</string>
    <string name="IsScreenFetching">正在抓取屏幕信息…</string>
    <string name="PermissionCenter">权限中心</string>
    <string name="Product">产品</string>
    <string name="Share">分享</string>
    <string name="Help">帮助</string>
    <string name="Score">评分</string>
</resources>
