<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step1_open_floatPermission"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/llt_parent_applyFloatPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ApplyFloatPermissionMsg"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/GotoFloatPerActivityErrorMsg"
            android:textSize="13sp"
            android:textColor="#FF0000"/>

        <TextView
            android:id="@+id/tv_applyFloatPermissionMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/OpenedFloatPermission"
            android:textSize="13sp"
            android:textColor="@color/skyBlue"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llt_parent_openedFloatPermission"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpenedFloatPermissionMsg"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_cancel_applyFloatPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/Cancel"
            android:textSize="14sp"
            android:padding="10dp"
            android:textColor="@drawable/textcolor_touch_effect_lavender"/>

        <TextView
            android:id="@+id/tv_goto_applyFloatPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/GotoSettings"
            android:textSize="14sp"
            android:textColor="@drawable/textcolor_touch_effect_lavender"/>

    </LinearLayout>

</LinearLayout>