<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="500dp"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorGlobalView"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorText2"
            android:text="@string/FromText"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <TextView
            android:id="@+id/dialogFT_tv_copyFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@drawable/tv_color"
            android:text="@string/Copy"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <TextView
            android:id="@+id/dialogFT_tv_fromText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFromText"
            android:textSize="14sp"
            android:lineSpacingExtra="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

    </ScrollView>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorText2"
            android:textStyle="bold"
            android:text="@string/ToText"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <TextView
            android:id="@+id/dialogFT_tv_copyToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@drawable/tv_color"
            android:text="@string/Copy"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="80dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <TextView
            android:id="@+id/dialogFT_tv_toText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

    </ScrollView>
</LinearLayout>